<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/ui_bg_color"
        app:layout_constraintBottom_toBottomOf="@+id/tab_layout"
        app:layout_constraintTop_toTopOf="parent"/>

    <org.koishi.launcher.h2co3library.component.view.H2CO3LauncherTabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_container_white"
        app:follow_theme="true"
        app:layout_constraintTop_toTopOf="parent"
        app:tabGravity="fill"
        app:tabTextAppearance="@style/TabTextAppearance"
        app:tabUnboundedRipple="false">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/settings_type_global_manage"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/settings_launcher"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/help"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/community"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/about"/>

    </org.koishi.launcher.h2co3library.component.view.H2CO3LauncherTabLayout>

    <org.koishi.launcher.h2co3library.component.view.H2CO3LauncherUILayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>