<?xml version="1.0" encoding="utf-8"?>
<org.koishi.launcher.h2co3library.component.view.H2CO3LauncherLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="5dp"
    android:paddingEnd="5dp">

    <org.koishi.launcher.h2co3library.component.view.H2CO3LauncherTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/edit_view_event"
        android:textSize="11sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <org.koishi.launcher.h2co3library.component.view.H2CO3LauncherLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <org.koishi.launcher.h2co3library.component.view.H2CO3LauncherTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/edit_button_event_follow"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <org.koishi.launcher.h2co3library.component.view.H2CO3LauncherSwitch
            android:id="@+id/pointer_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </org.koishi.launcher.h2co3library.component.view.H2CO3LauncherLinearLayout>

    <org.koishi.launcher.h2co3library.component.view.H2CO3LauncherLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <org.koishi.launcher.h2co3library.component.view.H2CO3LauncherTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/edit_button_event_movable"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <org.koishi.launcher.h2co3library.component.view.H2CO3LauncherSwitch
            android:id="@+id/movable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </org.koishi.launcher.h2co3library.component.view.H2CO3LauncherLinearLayout>

    <org.koishi.launcher.h2co3library.component.view.H2CO3LauncherTabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:tabGravity="fill"
        app:tabTextAppearance="@style/TabTextAppearance"
        app:tabUnboundedRipple="false">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edit_button_event_press"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edit_button_event_long_press"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edit_button_event_click"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edit_button_event_double_click"/>

    </org.koishi.launcher.h2co3library.component.view.H2CO3LauncherTabLayout>

    <org.koishi.launcher.h2co3library.component.view.H2CO3LauncherLinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</org.koishi.launcher.h2co3library.component.view.H2CO3LauncherLinearLayout>